--- a/org.jtool.changetracker.core/plugin.xml
+++ b/org.jtool.changetracker.core/plugin.xml
@@ -22,5 +22,11 @@
             name="Chnage Tracker">
       </category>
    </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup
+            class="org.jtool.changetracker.core.Activator">
+      </startup>
+   </extension>
 
 </plugin>
