Bug fix & refactoring

--- a/org.jtool.changetracker.recorder/plugin.xml
+++ b/org.jtool.changetracker.recorder/plugin.xml
@@ -5,7 +5,7 @@
          point="org.eclipse.ui.preferencePages">
       <page
             category="org.jtool.changetracker.PreferencePage"
-            class="org.jtool.changetracker.recorder.ChangeOperationRecorderPreferencePage"
+            class="org.jtool.changetracker.recorder.OperationRecorderPreferencePage"
             id="org.jtool.changerecorder.PreferencePage"
             name="ChangeOperationRecorder">
       </page>
@@ -13,14 +13,14 @@
    <extension
          point="org.eclipse.core.runtime.preferences">
       <initializer
-            class="org.jtool.changetracker.recorder.ChangeOperationRecorderPreferenceInitializer">
+            class="org.jtool.changetracker.recorder.OperationRecorderPreferenceInitializer">
       </initializer>
    </extension>
    <extension
          point="org.jtool.macrorecorder.handlers">
       <handler
-            class="org.jtool.changetracker.recorder.ChangeOperationRecorder"
-            commandId="org.jtool.changetracker.recorder.ChangeOperationRecorder">
+            class="org.jtool.changetracker.recorder.MacroReceiver"
+            commandId="org.jtool.changetracker.recorder.MacroReceiver">
       </handler>
    </extension>
 </plugin>
