--- a/org.jtool.changetracker.feature/.project
+++ b/org.jtool.changetracker.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.jtool.changetracker.feature</name>
+	<name>org.jtool.changetracker.replayer.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
