so as not to restore the CodeAnimatingView

--- a/org.jtool.changetracker.sample/plugin.xml
+++ b/org.jtool.changetracker.sample/plugin.xml
@@ -9,7 +9,7 @@
              icon="icons/cr.gif"
              id="org.jtool.changetracker.sample.CodeAnimatingViewSample"
              name="CodeAnimatingView+"
-             restorable="true">
+             restorable="false">
        </view>
    </extension>
    <extension
